<resources>
    <string name="app_name">Restaurant Owners App</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_message">You have to login first to use this app</string>
    <string name="action_logout">Logout</string>
    <string name="beacon_uuid_label">UUID</string>
    <string name="beacon_major_label">major</string>
    <string name="beacon_minor_label">minor</string>
    <string name="beacon_distance_label">distance</string>

    <string name="table_label">table</string>
    <string name="save">Save</string>
    <string name="loading">Loading</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="message">Message</string>
    <string name="menu">Menu</string>
    <string name="tables">Tables</string>
    <string name="category">Category</string>
    <string name="categories_empty">Your menu does not have categories yet</string>
    <string name="menu_empty">Your menu for this category is empty</string>
    <string name="title_activity_new_category">NewCategoryActivity</string>
    <string name="category_name">New category name</string>
    <string name="price">Price</string>
    <string name="title_activity_new_menu_item">NewMenuItemActivity</string>
</resources>
