<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sam.smartplacesownersapp.ui.BeaconConfigFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/beacon_uuid_label"
        android:id="@+id/beacon_config_uuid_label_textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/beacon_uuid_label"
        android:id="@+id/beacon_config_uuid_textView"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/beacon_config_uuid_label_textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/beacon_major_label"
        android:id="@+id/beacon_config_major_label_textView"
        android:layout_below="@+id/beacon_config_uuid_label_textView"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/beacon_major_label"
        android:id="@+id/beacon_config_major_textView"
        android:layout_below="@+id/beacon_config_uuid_label_textView"
        android:layout_toEndOf="@+id/beacon_config_uuid_label_textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/beacon_minor_label"
        android:id="@+id/beacon_config_minor_label_textView"
        android:layout_below="@+id/beacon_config_major_label_textView"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_marginLeft="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/beacon_minor_label"
        android:id="@+id/beacon_config_minor_textView"
        android:layout_below="@+id/beacon_config_major_textView"
        android:layout_alignStart="@+id/beacon_config_major_textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/table_label"
        android:id="@+id/beacon_config_table_label_textView"
        android:layout_below="@+id/beacon_config_minor_label_textView"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:id="@+id/beacon_config_table_editText"
        android:layout_alignTop="@+id/beacon_config_table_label_textView"
        android:layout_alignStart="@+id/beacon_config_minor_textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:id="@+id/beacon_config_save_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
